<resources>
    <!--Application Title-->

    <string name="app_name">Booky</string>

    <!--Menu-->

    <string name="title_home">Home</string>

    <string name="title_community">Community</string>

    <string name="title_messaging">Messaging</string>

    <string name="title_notifications">Notifications</string>

    <string name="title_profile">Profile</string>

    <!--TextViews-->

    <string name="Recommendation_string">Recommended for You</string>

    <string name="Latest_string">Latest Books</string>

    <string name="Rated_string">Most Rated</string>

    <!--Profile-->

    <string name="Profile_name">John Doe</string>

    <string name="Profile_btn0">Edit Profile</string>

    <string name="Profile_btn1">Recommendations</string>

    <string name="Profile_btn2">Follow</string>

    <string name="Profile_btn3">Message</string>

    <string name="Profile_about">About</string>

    <string name="Profile_link0">http://www.website.com</string>

    <string name="Profile_link1">http://www.facebook.com/username</string>

    <string name="Profile_link2">http://www.twitter.com/username</string>

    <string name="Profile_date">DD/MM/YYYY</string>

    <string name="Profile_interest">Interested</string>

    <string name="Profile_navBtn0">Books</string>

    <string name="Profile_navBtn1">Followers</string>

    <string name="Profile_navBtn2">Activities</string>

    <string name="Profile_books">Books</string>

    <string name="Profile_followers">Followers</string>

    <string name="Profile_activities">Activities</string>

    <!--Author Profile-->

    <string name="Author_name">Stephan King</string>

    <string name="Author_message">Message</string>

    <string name="Author_follow">Follow</string>

    <!--Book Page-->

    <string name="Book_title">Book Title :</string>

    <string name="Book_author">Author :</string>

    <string name="Book_genre">Genre :</string>

    <string name="Book_genreName">Crime</string>

    <string name="Book_averageRating">Average Rating :</string>

    <string name="Book_userRating">Rate This Book</string>

    <string name="Book_summarySF">Overview</string>

    <string name="Book_reviews">Reviews</string>

    <string name="Book_reviewsHintMsG">Write your Opinion....</string>

    <string name="Book_revealReviews">More Reviews.....</string>

    <!--Settings-->

    <string name="title_activity_settings">SettingsActivity</string>

    <string name="Settings_tab_text_0">Personal info</string>

    <string name="Settings_tab_text_1">Privacy Settings</string>

    <string name="action_settings">Settings</string>

    <string name="section_format">Hello World from section: %1$d</string>

    <string name="Settings_firstName">First Name</string>

    <string name="Settings_lastName">Last Name</string>

    <string name="Settings_info0">Mobile Number</string>

    <string name="Settings_info1">Interests</string>

    <string name="Settings_info2">Occupation</string>

    <string name="Settings_info3">About</string>

    <string name="Settings_link0">Website</string>

    <string name="Settings_link1">Facebook</string>

    <string name="Settings_link2">Twitter</string>

    <string name="Settings_pic">Change Picture</string>

    <string name="Settings_picChange">Choose Picture</string>

    <string name="Settings_btn0">Submit</string>

    <string name="Settings_btn1">Save Changes</string>

    <string name="Settings_btn2">Cancel</string>

    <string name="Settings_hint0">John</string>

    <string name="Settings_hint1">Doe</string>

    <string name="Settings_account">Account Information</string>

    <string name="Settings_passwordHint">New Password</string>

    <string name="Settings_passwordConfirmationHint">Confirm Password</string>

    <string name="Settings_password">Password Management</string>

    <string name="Settings_passwordOld">Old Password</string>

    <!--Others-->

    <string name="Description">Some Description</string>

    <string name="Paragraph">Lorem ipsum dolor sit amet diam nonummy nibh dolore. Lorem ipsum dolor sit amet diam nonummy nibh dolore.Lorem ipsum dolor sit amet diam nonummy nibh dolore</string>

    <string name="Book">Book Title</string>

    <string name="Follower">Follower Name</string>

    <string name="AVG">50 Ratings (Avg = 4.2)</string>

    <string name="Socialization">Share :</string>

    <string name="Recommendation0">Books From The Same Genre</string>

    <string name="Recommendation1">Books By The Same Author</string>

    <string name="ExampleTextView">Hello There</string>

    <string name="TimeView">TimeView</string>

    <string name="Male_name">Richard Roe</string>

    <string name="Female_name">Jane Roe</string>

    <string name="Social_btn0">Support</string>

    <string name="Social_btn1">Comment</string>

    <string name="Social_btn2">Share</string>

    <string name="Social_Notifications">an Action happened recently</string>
    <string name="Settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_login">Find The Best Books</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="Register_title">Find The Best Books</string>
    <string name="Register_tab0">Sign In</string>
    <string name="Register_tab1">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Entering_option">Sign in Using Facebook</string>
    <string name="Orword">Or...</string>

</resources>
