<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:layout_marginBottom="@dimen/activity_default_pixel"
    tools:ignore="RtlSymmetry">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/NotificationPic"
            android:layout_width="88dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/Description"
            android:src="@mipmap/ic_launcher"
            android:layout_marginTop="@dimen/activity_default_pixel"
            android:layout_marginBottom="@dimen/activity_default_pixel"/>

        <TextView
            android:id="@+id/Recent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Social_Notifications"
            android:padding="@dimen/activity_small_pixel"
            android:layout_margin="@dimen/activity_default_pixel"
            android:layout_marginTop="@dimen/activity_default_pixel"
            android:layout_toEndOf="@id/NotificationPic"/>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TimeView"
            android:textColor="@color/textPrimaryDark"
            android:layout_toEndOf="@id/Recent"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="24dp"/>

    </RelativeLayout>

</LinearLayout>